# biophylo

./: README.md  biophylo.cabal  test.hs  test.newick
Bio/: Phylo.hs
Bio/Phylo/: BaseTree.hs  Tree.hs
Bio/Phylo/IO/: Newick.hs  Nexus.hs
